--- a/js/es6/spread/2.html
+++ b/js/es6/spread/2.html
@@ -19,13 +19,8 @@
   <p>这是第9个段落</p>
   <p>这是第10个段落</p>
   <script>
-    const nodelist = document.getElementsByTagName('p');
-    const nodeArray = document.querySelectorAll('p');
-    // console.log(nodelist, nodeArray);
-    // nodeArray.forEach(node => {
-    //   console.log(node.__proto__.constructor);
-    // })
-    nodelist.join(',')
+    const Array1 = document.getElementsByTagName('p');
+    const Array2 = document.querySelectorAll('p');
   </script>
 </body>
 
